tests/run-pass/conf_whitelisted.rs
#![feature(plugin)]
#![plugin(clippy(conf_file="./tests/aux/conf_whitelisted.toml"))]

fn main() {}
